fix #637 webapp, use item modal not showing

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -853,7 +853,7 @@ form .q-item__label, .big-label {
 /* fix for <q-select> menus on desktop: must be above .q-dialog.fullscreen
 (z-index provided by Quasar is 6000) */
 .q-menu {
-  z-index: 7002;
+  z-index: 7004;
 }
 /* fix for missing vertical scrolling at end.vue, only for android
 note that .platform-android selector targets both webapp (Chrome) & hybrid on android
